--- a/calico_versioned_docs/version-3.26/reference/resources/kubecontrollersconfig.mdx
+++ b/calico_versioned_docs/version-3.26/reference/resources/kubecontrollersconfig.mdx
@@ -16,7 +16,7 @@ metadata:
 spec:
   logSeverityScreen: Info
   healthChecks: Enabled
-  etcdv3CompactionPeriod: 10m
+  etcdV3CompactionPeriod: 10m
   prometheusMetricsPort: 9094
   controllers:
     node:
@@ -52,7 +52,7 @@ spec:
 | logSeverityScreen      | The log severity above which logs are sent to the stdout.                                                  | Debug, Info, Warning, Error, Fatal  | string                            | Info    |
 | healthChecks           | Enable support for health checks                                                                           | Enabled, Disabled                   | string                            | Enabled |
 | prometheusMetricsPort  | Port on which to serve prometheus metrics.                                                                 | Set to 0 to disable, > 0 to enable. | TCP port                          | 9094    |
-| etcdv3CompactionPeriod | The period between etcdv3 compaction requests. Only applies when using etcd as the {{prodname}} datastore. | Set to 0 to disable, > 0 to enable  | [Duration string][parse-duration] | 10m     |
+| etcdV3CompactionPeriod | The period between etcdv3 compaction requests. Only applies when using etcd as the {{prodname}} datastore. | Set to 0 to disable, > 0 to enable  | [Duration string][parse-duration] | 10m     |
 | controllers            | Enabled controllers and their settings                                                                     |                                     | [Controllers](#controllers)       |         |
 
 ### Controllers
