DOCS-publish-ce-3.19-ep1

--- a/calico-enterprise_versioned_docs/version-3.19-1/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/release-notes/index.mdx
@@ -27,20 +27,20 @@ We've updated the Endpoints page in Manager UI with a new flow logs panel so you
 
 ### Improvements to security events dashboard
 
-We've added the following improvements to the [Security events dashboard](../threat/security-event-management.mdx):
+We've added the following improvements to the [Security events dashboard](../threat/security-event-management):
 
 - Jira and Slack webhook integration for security event alerts
 
-   By [configuring webhooks](../threat/configuring-webhooks.mdx), you can now push alerts from the Security Overview dashboard in Manager UI to Jira and Slack so incident response and security teams can use native tools to respond to security event alerts.
+   By [configuring security event alerts](../threat/configuring-webhooks), you can push alerts from the Security Overview dashboard in Manager UI to Jira and Slack. This feature allows incident response and security teams to use native tools to respond to security event alerts.
 
 - Added threat feed alerts
 
-   If you have implemented global threat feeds for suspicious activity (domains or suspious IPs), alerts are now visible in the Security Overview dashboard. For more information on threatfeeds, see  [Trace and block suspicious IPs](.../threat/suspicious-ips).
+   If you have implemented global threat feeds for suspicious activity (domains or suspious IPs), alerts are now visible in the Security Overview dashboard. For more information on threat feeds, see [Trace and block suspicious IPs](../threat/suspicious-ips).
 
 ### Deprecated and removed features
 
 * The anomaly detection feature was removed in v3.18.1 If anomaly detection is enabled and you upgrade to {{prodname}} 3.18, you will stop receiving anomaly detection alerts.
-* [Manual install for Windows](../getting-started/install-on-clusters/windows-calico/manual-install/) will be deprecated in a future release. Starting in in v3.18.1, the [standard installation is operator-based](../getting-started/install-on-clusters/windows-calico/operator).
+* [Manual install for Windows](../getting-started/install-on-clusters/windows-calico/manual-install/) will be deprecated in a future release. Starting in v3.18.1, the [standard installation is operator-based](../getting-started/install-on-clusters/windows-calico/operator).
 
 ## Technology Preview features
 
@@ -83,7 +83,7 @@ We've added the following improvements to the [Security events dashboard](../thr
 
 ### Calico Enterprise 3.19.0 (early preview)
 
-January xx, 2024
+January 25, 2024
 
 Calico Enterprise 3.19.0 is now available as an early preview release.
 This release is for previewing and testing purposes only.
