DOCS-2060: Adds Windows node support for AKS

--- a/calico-cloud/get-started/connect/requirements/aks.mdx
+++ b/calico-cloud/get-started/connect/requirements/aks.mdx
@@ -58,6 +58,23 @@ Please click the question icon in Manager UI under the user icon in the upper ri
 
 :::
 
+## Remove taints from Linux node pools
+
+Hybrid clusters on AKS may have taints applied to Linux nodes that prevent {{prodname}} from scheduling pods on those nodes.
+These taints must be removed before you connect your cluster to {{prodname}}.
+
+You can check whether any node pools in your cluster have taints by running the following command:
+
+```bash
+az aks nodepool list --resource-group <group-name> --cluster-name <cluster-name> --query "[].{name:name nodeTaints:nodeTaints}"
+```
+
+Remove any taints in the Linux node pools by running the command:
+
+```bash
+az aks nodepool update --resource-group <group-name> --cluster-name <cluster-name> --name <nodepool-name> --node-taints ""
+```
+
 ## Need help connecting your cluster?
 
 [Troubleshooting checklist](../checklist.mdx)
