--- a/calico-cloud_versioned_docs/version-18-2/get-started/connect/requirements/system-requirements.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/get-started/connect/requirements/system-requirements.mdx
@@ -15,7 +15,7 @@ Verify that your cluster meets these requirements.
 
 | Required                    | Supported                                                    |
 | --------------------------- | ------------------------------------------------------------ |
-| **Platforms**               | All of the Calico Open Source [Kubernetes deployments](https://docs.projectcalico.org/getting-started/kubernetes/), except: <br/><br/>- OpenShift<br />- IBM Cloud Kubernetes Service (IKS)<br/>- K3s <br />- Clusters with Windows nodes<br />- RKE |
+| **Platforms**               | All of the Calico Open Source [Kubernetes deployments](https://docs.projectcalico.org/getting-started/kubernetes/), except: <br/><br/>- OpenShift<br />- IBM Cloud Kubernetes Service (IKS)<br/>- K3s <br />- Most clusters with Windows nodes. (We support Windows nodes on AKS.)<br />- RKE |
 | **Architecture**            | Only AMD64                                                   |
 | **Kubernetes version**      | - Minimum: v1.23<br/>- Maximum: v1.28<br /><br />If you have a later version than the maximum, contact [Support](https://support.tigera.io/). |
 | **CNIs**                    | - Calico CNI v3.15 to v3.26<br />- Amazon VPC CNI<br/>- Azure CNI<br/>- GKE CNI |
