--- a/calico-enterprise_versioned_docs/version-3.19-1/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/release-notes/index.mdx
@@ -18,7 +18,7 @@ Learn about the new features, bug fixes, and other updates in this release of {{
 
 ### Improved flow log filtering for destination domains
 
-We’ve updated the Felix parameter (`dest_domains`) for DNS policy to make it easy to find only domain names that the deployment actually connected to (not all the domain names that got translated to the same IP address).
+We’ve updated the Felix parameter (`dest_domains`) for DNS policy to make it easy to find only domain names that the deployment connected to (not all the domain names that got translated to the same IP address).
 For more information, see [Flow log data types](../visibility/elastic/flow/datatypes.mdx).
 
 ### New flow logs panel on Endpoints page
@@ -35,7 +35,7 @@ We've added the following improvements to the [Security events dashboard](../thr
 
 - Added threat feed alerts
 
-   If you have implemented global threat feeds for suspicious activity (domains or suspious IPs), alerts are now visible in the Security Overview dashboard. For more information on threat feeds, see [Trace and block suspicious IPs](../threat/suspicious-ips).
+   If you have implemented global threat feeds for suspicious activity (domains or suspicious IPs), alerts are now visible in the Security Overview dashboard. For more information on threat feeds, see [Trace and block suspicious IPs](../threat/suspicious-ips).
 
 ### Deprecated and removed features
 
