--- a/calico-cloud_versioned_docs/version-18-2/operations/monitor/prometheus/alertmanager.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/operations/monitor/prometheus/alertmanager.mdx
@@ -39,7 +39,7 @@ More detailed information about Alertmanager is available in the [upstream docum
   updated manifest.
 
   ```bash
-  kubectl -n tigera-operator apply -f alertmanager-config.yaml
+  kubectl -n tigera-operator apply -f alertmanager-secret.yaml
   ```
 
 Your changes should be applied in a few seconds by the config-reloader
