--- a/calico-cloud_versioned_docs/version-18-2/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/release-notes/index.mdx
@@ -316,8 +316,6 @@ Calico Cloud includes new and improved Dashboards that enable operators to defin
 
 Calico Cloud includes a new UI that can be used to manage and configure global threat feeds
 
-For more information, see [Detect and alert on anomalies](../threat/security-anomalies.mdx) and [Trace and block suspicious IPs](../threat/suspicious-ips.mdx).
-
 #### Namespace-based policy recommendations
 
 Calico Cloud has improved its policy recommendation engine to add namespace-based recommendations.
@@ -454,7 +452,7 @@ To help meet your compliance requirements, we've added documentation to export l
 
 ![tech-preview](/img/calico-cloud/tech-preview.svg)
 
-{{prodname}} has made the configuration and deployment of anomaly detection jobs for threat detection and performance hotpots more granular, allowing you to selectively enable jobs depending on your use case. See [Detect and alert on anomalies](../threat/security-anomalies.mdx).
+{{prodname}} has made the configuration and deployment of anomaly detection jobs for threat detection and performance hotpots more granular, allowing you to selectively enable jobs depending on your use case.
 
 ### Improvement: Manager UI now displays cluster installation progress and streaming logs
 
