--- a/calico-cloud_versioned_docs/version-18-2/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/release-notes/index.mdx
@@ -9,9 +9,51 @@ title: Release notes
 
 ### New features and enhancements
 
-### Known issues
+#### Assign custom roles to users automatically with Entra ID (formerly Azure AD) groups
+
+We've added the ability to link custom roles in Calico Cloud to your organization's Entra ID groups.
+You can define and modify group membership in Entra ID, and Calico Cloud will automatically grant role-based access to users based on that group membership.
+
+For more information, see [Create a custom role for an Entra ID group](../users/create-custom-role-for-entra-id-group.mdx).
+
+#### Export custom roles
+
+In this release you can export custom roles from a managed cluster and apply them to another managed cluster.
+Previously, if you wanted to duplicate roles in multiple clusters, you needed to create them manually for each cluster.
+Now there is a process to apply those roles quickly and accurately in all clusters.
+
+For more information, see [Creating and assigning custom roles](../users/create-and-assign-custom-roles.mdx)
+
+#### Windows node support for Azure Kubernetes Service
+
+We've added support for Windows nodes in AKS clusters.
+
+For more information, see [AKS requirements](../get-started/connect/requirements/aks.mdx).
+
+#### VXLAN support for cluster mesh and federation
+
+We've expanded our support of cluster mesh to clusters using VXLAN for networking. Cluster mesh can be used to federate services and endpoints to authorize cross-cluster communication with {{prodname}} network policies.
+
+For more information, see [Configure federated endpoint identity and services](../multicluster/federation/kubeconfig.mdx).
+
+#### Support for Azure CNI with overlay networking for AKS
+
+We now officially support AKS clusters that are using overlay networking.
+This option is useful if you've exhausted your IP addresses.
+This option augments existing support for Azure CNI with no overlay (where a VNET IP address is assigned to every pod).
+
+#### Support for Kubernetes 1.28
+
+This release adds support for Kubernetes 1.28.
+
+### Deprecated and removed features
+
+* The anomaly detection feature is removed in this release.
+  If you enabled this feature, you will now stop receiving anomaly detection alerts.
 
 ### Bug fixes
+
+* We fixed a problem that stopped diagnostics from being collected after a failed installation.
 
 ## December 21, 2023 (version 18.2.0)
 
