Add-link-component-versions

--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -7,6 +7,8 @@ title: Release notes
 
 Learn about the new features, bug fixes, and other updates in this release of {{prodname}}.
 
+[Component versions list](../reference/component-versions)
+
 ## New features and enhancements
 
 ### VXLAN support for cluster mesh and federation
