DOCS-2051: Create custom roles for Entra AD groups

--- a/calico-cloud_versioned_docs/version-18-2/users/create-and-assign-custom-roles.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/users/create-and-assign-custom-roles.mdx
@@ -43,7 +43,7 @@ Certain permissions are required for a user to access common {{prodname}} featur
 1. Click the user icon <IconUser width="20"/> > **Manage Team**.
 1. Under the **Roles** tab, click **Add Role**, enter a name and description for the custom role, and then click **Save**.
 1. Select the cluster you want to want the role to apply to by clicking **Cluster:** and choosing the cluster.
-1. Locate your new role in the list, select **Action** > **Manage permissions** > **Edit**, and the click **Add Permission**.
+1. Locate your new role in the list, select **Action** > **Manage permissions** > **Edit**, and then click **Add Permission**.
 1. Under **Permission**, choose a permission type from the list.
 Depending on the permission, you may also need to choose a namespace or policy tier.
 1. (optional) Click **Add permission** to add more permissions to your role for this cluster.
