--- a/calico-cloud_versioned_docs/version-18-2/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/release-notes/index.mdx
@@ -22,7 +22,7 @@ In this release you can export custom roles from a managed cluster and apply the
 Previously, if you wanted to duplicate roles in multiple clusters, you needed to create them manually for each cluster.
 Now there is a process to apply those roles quickly and accurately in all clusters.
 
-For more information, see [Creating and assigning custom roles](../users/create-and-assign-custom-roles.mdx)
+For more information, see [Creating and assigning custom roles](../users/create-and-assign-custom-roles.mdx).
 
 #### Windows node support for Azure Kubernetes Service
 
@@ -56,7 +56,7 @@ This release adds support for Kubernetes 1.28.
 * We fixed a problem that stopped diagnostics from being collected after a failed installation.
 
 ## December 21, 2023 (version 18.2.0)
-q
+
 ### New features and enhancements
 
 #### Security Posture Overview dashboard
