Restructure BYO prometheus doc.

--- a/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
+++ b/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
@@ -37,7 +37,7 @@ For the supported version of Prometheus in this release, see the [Release Notes]
 ## How to
 
 - [Scrape all enabled metrics](#scrape-all-enabled-metrics)
-- [Scrape metrics from specific components](#scrape-metrics-from-specific-components)
+- [Scrape metrics from specific components directly](#scrape-metrics-from-specific-components-directly)
 - [Verify BYO Prometheus](#verify-byo-prometheus)
 - [Create policy to secure traffic between pods](#create-policy-to-secure-traffic-between-pods)
 
@@ -81,10 +81,10 @@ The following example shows a Prometheus server installed in namespace "external
     ```
     That's it. You should be seeing the new metrics show up in your Prometheus instance within a minute. For more information on verifying metrics, see the section, [Verify BYO Prometheus](#verify-byo-prometheus).
 
-### Scrape metrics from specific components
+### Scrape metrics from specific components directly
 
 We recommend the previous section for scraping all enabled metrics. Read on if you wish to scrape metrics from specific
-components, or if you wish to enable metrics that are disabled by default.
+components directly using mTLS, or if you wish to enable metrics that are disabled by default.
 
 <Tabs>
 <TabItem label="elasticsearch" value="elasticsearch-0">
@@ -398,8 +398,6 @@ The .yamls have no namespace defined so when you apply `kubectl`, it is applied 
 
 ### Verify BYO Prometheus
 
-**Verify metrics in the Prometheus console**
-
 1. Access the Prometheus dashboard using the port-forwarding feature.
 
    ```bash
@@ -412,7 +410,10 @@ The .yamls have no namespace defined so when you apply `kubectl`, it is applied 
 
    The Console table is populated with all of your nodes with the number of endpoints.
 
-**Verify endpoint authentication**
+### Troubleshooting
+
+This section is applicable only if you experience issues with mTLS after following the [Scrape metrics from specific components directly](#scrape-metrics-from-specific-components)
+section.
 
 1. Use the following command to retrieve the tls.key and tls.cert.
 
