--- a/calico-cloud/networking/configuring/dual-tor.mdx
+++ b/calico-cloud/networking/configuring/dual-tor.mdx
@@ -469,7 +469,7 @@ longer matters if there is any other programming of the true default route on th
     kind: ConfigMap
     metadata:
       name: bgp-layout
-      namespace: calico-system
+      namespace: tigera-operator
     data:
       earlyNetworkConfiguration: |
         apiVersion: projectcalico.org/v3
