--- a/calico_versioned_docs/version-3.25/operations/ebpf/enabling-ebpf.mdx
+++ b/calico_versioned_docs/version-3.25/operations/ebpf/enabling-ebpf.mdx
@@ -311,7 +311,7 @@ If both `kube-proxy` and `BPFKubeProxyIptablesCleanupEnabled` is enabled then `k
 To enable eBPF mode, change the `spec.calicoNetwork.linuxDataplane` parameter in the operator's `Installation` resource to `"BPF"`.
 
 ```bash
-kubectl patch installation.operator.tigera.io default --type merge -p '{"spec":{"calicoNetwork":{"linuxDataplane":"BPF",}}}'
+kubectl patch installation.operator.tigera.io default --type merge -p '{"spec":{"calicoNetwork":{"linuxDataplane":"BPF"}}}'
 ```
 
 :::note
