--- a/calico-enterprise_versioned_docs/version-3.19-1/operations/ebpf/enabling-ebpf.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/operations/ebpf/enabling-ebpf.mdx
@@ -190,7 +190,7 @@ To enable eBPF mode, change the `spec.calicoNetwork.linuxDataplane` parameter in
 resource to `"BPF"`.
 
 ```bash
-kubectl patch installation.operator.tigera.io default --type merge -p '{"spec":{"calicoNetwork":{"linuxDataplane":"BPF",}}}'
+kubectl patch installation.operator.tigera.io default --type merge -p '{"spec":{"calicoNetwork":{"linuxDataplane":"BPF"}}}'
 ```
 
 When enabling eBPF mode, pre-existing connections continue to use the non-BPF datapath; such connections should
