Restructure the BYO Prometheus doc

--- a/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
+++ b/calico-enterprise/operations/monitor/prometheus/byo-prometheus.mdx
@@ -22,12 +22,6 @@ Scrape {{prodname}} metrics for Bring Your Own (BYO) Prometheus.
 - felix
 - typha (not enabled by default)
 
-:::note
-
-With BYO Prometheus, {{prodname}} metrics and alerts are not visible in Manager UI.
-
-:::
-
 ## Before you begin
 
 **Supported**
@@ -40,6 +34,7 @@ For the supported version of Prometheus in this release, see the [Release Notes]
 - [Scrape metrics from specific components directly](#scrape-metrics-from-specific-components-directly)
 - [Verify BYO Prometheus](#verify-byo-prometheus)
 - [Create policy to secure traffic between pods](#create-policy-to-secure-traffic-between-pods)
+- [Troubleshooting](#troubleshooting)
 
 ### Scrape all enabled metrics
 
