DOCS-2070: Inital prep for OSS 3.27.1 patch release

--- a/calico_versioned_docs/version-3.27/release-notes/index.mdx
+++ b/calico_versioned_docs/version-3.27/release-notes/index.mdx
@@ -117,10 +117,9 @@ December 18, 2023
 
 Calico Open Source release 3.27.0 is now generally available.
 
-<!--
 ### Calico Open Source 3.18.1 bux fix update
 
-DD M YYYY
+February DD, 2024
 
 #### Enhancements
 
@@ -128,6 +127,4 @@ DD M YYYY
 
 #### How to update
 
-To update an existing installation of Calico Enterprise 3.18, see .
-
--->
+To update an existing installation of Calico Open Source 3.27, see [the upgrade guides](../operations/upgrading/index.mdx).
