New addition to mention we don't test on older k8s versions

--- a/calico_versioned_docs/version-3.26/getting-started/kubernetes/requirements.mdx
+++ b/calico_versioned_docs/version-3.26/getting-started/kubernetes/requirements.mdx
@@ -10,7 +10,7 @@ description: Review requirements before installing Calico to ensure success.
 
 #### Supported versions
 
-We test {{prodname}} {{version}} against the following Kubernetes versions.
+We test {{prodname}} {{version}} against the following Kubernetes versions. Other versions may work, but we are not actively testing them.
 
 - v1.24
 - v1.25
