[BPF] deprecate no longer used BPFKubeProxyEndpointSlicesEnabled option
refs https://github.com/projectcalico/calico/pull/8160

--- a/calico/reference/felix/configuration.mdx
+++ b/calico/reference/felix/configuration.mdx
@@ -175,7 +175,7 @@ See the [HOWTO guide](../../operations/ebpf/enabling-ebpf.mdx) for step-by step 
 | BPFEnforceRPF / <br/> FELIX_BPFENFORCERPF                                           | Enforce RPF on all host interfaces with BPF programs regardless of what is the per-interfaces or global setting.                                                                                                                                                                                                                                                                  | Disabled,Strict,Loose | Strict  |
 | BPFKubeProxyIptablesCleanupEnabled / <br/> FELIX_BPFKUBEPROXYIPTABLESCLEANUPENABLED | Controls whether Felix will clean up the iptables rules created by the Kubernetes `kube-proxy`; should only be enabled if `kube-proxy` is not running.                                                                                                                                                                                                                            | true,false            | true    |
 | BPFKubeProxyMinSyncPeriod / <br/> FELIX_BPFKUBEPROXYMINSYNCPERIOD                   | Controls the minimum time between dataplane updates for Felix's embedded `kube-proxy` implementation.                                                                                                                                                                                                                                                                             | seconds               | `1`     |
-| BPFKubeProxyEndpointSlicesEnabled / <br/> FELIX_BPFKUBEPROXYENDPOINTSLICESENABLED   | Controls whether Felix's embedded kube-proxy derives its services from Kubernetes' EndpointSlices resources. Using EndpointSlices is more efficient but it requires EndpointSlices support to be enabled at the Kubernetes API server.                                                                                                                                            | true,false            | false   |
+| BPFKubeProxyEndpointSlicesEnabled / <br/> FELIX_BPFKUBEPROXYENDPOINTSLICESENABLED   | This option is deprecated and will be remove in the next version. BPF proxy always accepts endpoint slices.                                                                                                                                            | true,false            | false   |
 | BPFMapSizeConntrack / <br/> FELIX_BPFMapSizeConntrack                               | Controls the size of the conntrack map. This map must be large enough to hold an entry for each active connection. Warning: changing the size of the conntrack map can cause disruption.                                                                                                                                                                                          | int                   | 512000  |
 | BPFMapSizeNATFrontend / <br/> FELIX_BPFMapSizeNATFrontend                           | Controls the size of the NAT frontend map. FrontendMap should be large enough to hold an entry for each nodeport, external IP and each port in each service.                                                                                                                                                                                                                      | int                   | 65536   |
 | BPFMapSizeNATBackend / <br/> FELIX_BPFMapSizeNATBackend                             | Controls the size of the NAT backend map. This is the total number of endpoints. This is mostly more than the size of the number of services.                                                                                                                                                                                                                                     | int                   | 262144  |
