--- a/calico/reference/resources/felixconfig.mdx
+++ b/calico/reference/resources/felixconfig.mdx
@@ -126,7 +126,7 @@ spec:
 | bpfExternalServiceMode             | In eBPF dataplane mode, controls how traffic from outside the cluster to NodePorts and ClusterIPs is handled. In Tunnel mode, packet is tunneled from the ingress host to the host with the backing pod and back again. In DSR mode, traffic is tunneled to the host with the backing pod and then returned directly; this requires a network that allows direct return. | Tunnel,DSR                                                   | string                                  | Tunnel                                                       |
 | bpfKubeProxyIptablesCleanupEnabled | In eBPF dataplane mode, controls whether Felix will clean up the iptables rules created by the Kubernetes `kube-proxy`; should only be enabled if `kube-proxy` is not running. | true,false                                                   | boolean                                 | true                                                         |
 | bpfKubeProxyMinSyncPeriod          | In eBPF dataplane mode, controls the minimum time between dataplane updates for Felix's embedded `kube-proxy` implementation. | `5s`, `10s`, `1m` etc.                                       | duration                                | `1s`                                                         |
-| BPFKubeProxyEndpointSlicesEnabled  | In eBPF dataplane mode, controls whether Felix's embedded kube-proxy derives its services from Kubernetes' EndpointSlices resources. Using EndpointSlices is more efficient but it requires EndpointSlices support to be enabled at the Kubernetes API server. | true,false                                                   | boolean                                 | false                                                        |
+| BPFKubeProxyEndpointSlicesEnabled  | This option is deprecated and will be remove in the next version. BPF proxy always accepts endpoint slices. | true,false                                                   | boolean                                 | false                                                        |
 | bpfMapSizeConntrack                | In eBPF dataplane mode, controls the size of the conntrack map. | int                                                          | int                                     | 512000                                                       |
 | bpfMapSizeIPSets                   | In eBPF dataplane mode, controls the size of the ipsets map. | int                                                          | int                                     | 1048576                                                      |
 | bpfMapSizeNATAffinity              | In eBPF dataplane mode, controls the size of the NAT affinity map. | int                                                          | int                                     | 65536                                                        |
