--- a/calico-enterprise_versioned_docs/version-3.17/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/threat/web-application-firewall.mdx
@@ -181,11 +181,9 @@ You can change WAF rule so that the traffic is blocked.
 
 The default rulesets work fine for most deployments. However, you can customize them to suit your requirements.
 
-By default, {{prodname}} ships with CoreRuleset v3.x with the following setup files pre-loaded:
+By default, {{prodname}} ships with CoreRuleset v3.3.5 with the following setup files pre-loaded:
 
-- [modsecdefault.conf](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/embed/coreruleset/modsecdefault.conf)
-- [crs-setup.conf](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/embed/coreruleset/crs-setup.conf)
-- [Ruleset files](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/embed/coreruleset/rules)
+- [tigera.conf](https://github.com/tigera/operator/blob/master/pkg/render/applicationlayer/embed/coreruleset/tigera.conf)
 
 To start creating your rules, it is recommended that you download the files (all three) and create your modifications from there, as follows:
 
