--- a/calico-cloud_versioned_docs/version-18-2/threat/web-application-firewall.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/threat/web-application-firewall.mdx
@@ -31,7 +31,8 @@ This how-to-guide uses the following {{prodname}} features:
 ### About {{prodname}} WAF
 
 WAF is deployed in your cluster along with Envoy DaemonSet. {{prodname}} proxies selected service traffic through Envoy, checking HTTP requests using the industry-standard 
-[ModSecurity](https://owasp.org/www-project-modsecurity-core-rule-set/) with OWASP CoreRuleSet v3.3.5 modified for kubernetes workloads. To review the rules deployed with the WAF, see [Ruleset files](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/embed/coreruleset/rules).
+[ModSecurity](https://owasp.org/www-project-modsecurity-core-rule-set/) with OWASP CoreRuleSet v3.3.5 modified for kubernetes workloads.
+<!--To review the rules deployed with the WAF, see [Ruleset files](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/embed/coreruleset/rules).-->
 
 You simply enable WAF in Manager UI, and determine the services that you want to enable for WAF protection. By default WAF is set to `DetectionOnly` so no traffic will be denied until you are ready to turn on blocking mode. 
 
@@ -180,9 +181,7 @@ Some common changes are detailed below, for example:
 
 By default, {{prodname}} ships with CoreRuleset v3.3.5 with the following setup files pre-loaded:
 
-- [modsecdefault.conf](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/embed/coreruleset/modsecdefault.conf)
-- [crs-setup.conf](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/embed/coreruleset/crs-setup.conf)
-- [Ruleset files](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/embed/coreruleset/rules)
+- [tigera.conf](https://github.com/tigera/operator/blob/master/pkg/render/applicationlayer/embed/coreruleset/tigera.conf)
 
 There are two ways to edit your rules. 
 1. Edit the configmap directly using kubectl. The config map combines all the rule files together, so you will need to know how to search and find the exact place in the configmap that you want to update. 
